--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <img class="large" src="./images/the_prosciutto_concern.jpg">
       </div>
       <div class="column"></div>
+      <div class="column"></div>
     </div>
   </body>
 </html>
